# ChangeLog for games-arcade/tuxanci
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  tuxanci-0.18_rc2.ebuild:
  Add IUSE

  23 Jun 2007; Jakub Moc <jakub@gentoo.org> -tuxanci-0.18_rc1.ebuild,
  +tuxanci-0.18_rc2.ebuild:
  Version bump, drop old

  06 Jun 2007; Ali Polatel (hawking) <polatel@gmail.com>
  -tuxanci-0.07.ebuild:
  Drop old

  01 Jun 2007; Jakub Moc <jakub@gentoo.org> tuxanci-0.18_rc1.ebuild:
  Fix dependencies, add ~amd64 keyword

  01 Jun 2007; Jakub Moc <jakub@gentoo.org> +tuxanci-0.18_rc1.ebuild:
  Version bump

  10 Apr 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com)
  tuxanci-0.07.ebuild:
  Added ~x86-fbsd keyword

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org> tuxanci-0.07.ebuild:
  fix CVS header to stop repoman from complaining

  25 Mar 2007; Jakub Moc <jakub@gentoo.org> +tuxanci-0.07.ebuild,
  +metadata.xml:
  New ebuild, created by myself. Bug 172153
