@@ -1,4 +1,4 @@
-DIST tuxanci-0.18rc2.tar.bz2 3146646 RMD160 293fe151d77ff1a2b3311db63c949e7b8c9fdd28 SHA1 30048db90522791fc1d2cebebf1dd640fb159932 SHA256 4fdd63119219c6656108d760855b2abfd167c05b17e5c6b3cfbeaf6742a95d1a
-EBUILD tuxanci-0.18_rc2.ebuild 1096 RMD160 f6c73d4d59c5115cab295d1001a22d4e45f48d50 SHA1 8dd8459acb8a88e918d1d917866c37ca29043278 SHA256 55df81a04f13312328c5c0a1e75b36f43e1c833839d91befd2b04e5d7c0d89a0
-MISC ChangeLog 998 RMD160 2b9daa5c1ee9a711a94e2e35d5fba50b75435fc0 SHA1 12b0d848320a1001cdbfff2a207365254b76ae15 SHA256 bcc8da15b6c7bcdf1cb818056b8c9d896d94f054ec42f26374846bf688b66dec
+DIST tuxanci-0.20-src.tar.bz2 1544 RMD160 2d49133f447eb1bc9fb7dc8cc6afc8638a5cd094 SHA1 b281fc5c23c22a6aa747d1e81bf6c0321e223161 SHA256 08f72b82739931fc6d124e6ec3de035567818bfe90f0a08adceafafbb63fd545
+EBUILD tuxanci-0.20.ebuild 1788 RMD160 aa8d318b311ef70f0d56a8b98a5a5b15aad9edf4 SHA1 5abbae2f1cdc33931e447c971fa4101235461f4d SHA256 426720c6c39bca25116cfe2b4743df0a9aedace1f211e8f1e69309b9f3908639
+MISC ChangeLog 1157 RMD160 9bf71efd1f532a8b4e265cefcf1d9fb8d6c8009b SHA1 948625e98afab1ea04410cf9ce7933cb6c007d2d SHA256 3afb239d050f1515eb358b3a74bfd6fbcf0a475d9caac350804e70ab3d5067d7
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
