@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -tuxanci-0.18_rc2.ebuild, +tuxanci-0.20.ebuild:
+  Update ebuild (new version + new build system)
+
   29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   tuxanci-0.18_rc2.ebuild:
   Add IUSE
